[gd_scene load_steps=3 format=3 uid="uid://h485r0ogufj6"]

[ext_resource type="Script" path="res://Scripts/ItemScripts/chain_lightning.gd" id="1_cfep2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onstk"]
size = Vector2(133.334, 32)

[node name="ChainLightning" type="Area2D" groups=["item"]]
show_behind_parent = true
collision_layer = 32
collision_mask = 16
script = ExtResource("1_cfep2")

[node name="ChainLightningCollider" type="CollisionShape2D" parent="."]
scale = Vector2(1e-05, 1e-05)
shape = SubResource("RectangleShape2D_onstk")
disabled = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
